k8s_learn_file/learn-ngnix-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn-nginx-app-deployment
  labels:
    app: learn-nginx-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: learn-nginx-app
  template:
    metadata:
      labels:
        app: learn-nginx-app
    spec:
      imagePullSecrets:
        - name: testdocker-secret  # Reference to the secret created above
      containers:
      - name: learn-nginx-app
        image: nginx
        ports:
        - containerPort: 80
