k8s_learn_file/nginx-pod.yaml
# this for testing the comminucation btw two container inside one pod and creating mulitipule container inside one pod
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
    - name: sidecar
      image: curlimage/curl
      command: ["/bin/sh"]
      args: ["-c", "echo Hello from the sidecar container; sleep 300"]
