k8s_learn_file/nodeApp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  labels:
    app: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      imagePullSecrets:
        - name: testdocker-secret  # Reference to the secret created above
      containers:
      - name: nodeapp
        image: nafaebm/testdocker:b072b4c01c0380f868b6a0a058a628255fa8c927
        imagePullPolicy: Always  # Kubernetes will always pull the image from the registry, ensuring the latest version. it used specially in CI/CD
        ports:
        - containerPort: 5000
