k8s_learn_file/ingress-config.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: default
spec:
 rules:
 - host: myapp.com
   http:
    paths:
     - backend:
        serviceName: nginx-service
        servicePort: 8080
